feat: implement Spotify API integration and refine data model
- Integrate Spotify Web API for album, artist and song data retrieval
- Remove fields not provided by Spotify API (age, country, biography from Artist)
- Remove totalTracks field from Album entity
- Convert all IDs to Long type for consistency
- Update mappers and repositories to follow project conventions
- Add token-based authentication for Spotify API access

--- a/music-app/src/main/resources/application.properties
+++ b/music-app/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=Music App
+
+# Spotify Client Credentials
+spotify.client.id=3f094196dc034350afd6aa9d54e7697d
+spotify.client.secret=ceb6b6861ef24d61bd7ed14771c82899
+spotify.default.limit=20
