--- a/music-app/src/main/resources/application.properties
+++ b/music-app/src/main/resources/application.properties
@@ -18,3 +18,6 @@ spring.h2.console.path=/h2-console
 
 spotify.client.id=${SPOTIFY_CLIENT_ID}
 spotify.client.secret=${SPOTIFY_CLIENT_SECRET}
+
+jwt.expiration=6000000
+jwt.secret=${JWT_SECRET}
