--- a/music-app/src/main/resources/application.properties
+++ b/music-app/src/main/resources/application.properties
@@ -21,3 +21,15 @@ spotify.client.secret=${SPOTIFY_CLIENT_SECRET}
 
 jwt.expiration=6000000
 jwt.secret=${JWT_SECRET}
+
+# OAuth2 Google Configuration
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.scope=openid,profile,email
+spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.google.client-name=Google
+
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/v2/auth
+spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v2/userinfo
+spring.security.oauth2.client.provider.google.user-name-attribute=email
