--- a/music-app/src/main/resources/application.properties
+++ b/music-app/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.h2.console.path=/h2-console
 spotify.client.id=${SPOTIFY_CLIENT_ID}
 spotify.client.secret=${SPOTIFY_CLIENT_SECRET}
 
-jwt.expiration=6000000
+jwt.expiration=1800000
 jwt.secret=${JWT_SECRET}
 
 # OAuth2 Google Configuration
@@ -33,3 +33,6 @@ spring.security.oauth2.client.provider.google.authorization-uri=https://accounts
 spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
 spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v2/userinfo
 spring.security.oauth2.client.provider.google.user-name-attribute=email
+
+# OAuth2 Redirect Configuration
+app.oauth2.redirect-uri=${APP_OAUTH2_REDIRECT_URI:http://localhost:3000/oauth2/redirect}
