--- a/music-app/src/main/resources/application.properties
+++ b/music-app/src/main/resources/application.properties
@@ -35,4 +35,4 @@ spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleap
 spring.security.oauth2.client.provider.google.user-name-attribute=email
 
 # OAuth2 Redirect Configuration
-app.oauth2.redirect-uri=${APP_OAUTH2_REDIRECT_URI:http://localhost:3000/oauth2/redirect}
+app.oauth2.redirect-uri=${APP_OAUTH2_REDIRECT_URI}
