--- a/music-app/src/main/resources/application.properties
+++ b/music-app/src/main/resources/application.properties
@@ -21,6 +21,7 @@ spotify.client.secret=${SPOTIFY_CLIENT_SECRET}
 
 jwt.expiration=1800000
 jwt.secret=${JWT_SECRET}
+refresh.token.expiration=86400000
 
 # OAuth2 Google Configuration
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
